<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">NoQ</string>
    <string name="title_reservation_detail">Reservation Detail</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <!-- NoQ App Specific Strings -->
    <string name="title_noq">NoQ</string>
    <string name="title_home">Home</string>
    <string name="title_nearby_restaurants">Nearby Restaurants</string>
    <string name="title_payments">Payments</string>
    <string name="title_settings">Settings</string>
    <string name="title_chord_ifc">Chord Ifc</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="title_reservation_form">Make Reservation</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_number_of_guests">Number of Guests</string>
    <string name="title_restaurant_manager">Restaurant Manager</string>
    <string name="title_restaurant_menu">Restaurant Menu</string>
    <string name="title_address">Address</string>

    <!-- Actions -->
    <string name="action_reservations">Reservations</string>
    <string name="action_make_reservation">Make Reservation</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Error messages -->
    <string name="fatal_error">Fatal Error Occurred.</string>
    <!-- Nearby Feature -->
    <string name="nearby_start_updates">Start Update</string>
    <string name="nearby_stop_updates">Stop Update</string>
    <string name="nearby_get_location">Get Location</string>
    <string name="nearby_get_address">Get Address</string>
    <string name="title_address">Address</string>
    <string name="title_latlng">Lat/Long</string>

    <!-- location ecxample strings -->
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="connected">Client connected</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail"></string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="search_restaurants">Search Restaurants</string>
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>

    <!-- Chord APIs -->
    <string name="select_all">Select all</string>
    <string name="file">File</string>
    <string name="from_ps_file_ps">Receive %2$s from %1$s?</string>
    <string name="sending_ps_failed">Sending %s failed</string>
    <string name="receiving_ps_failed">Receiving %s failed</string>
    <string name="sending_failed_message">Sending failed message</string>
    <string name="not_support_file">Unable to send. File type not supported</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancelled">Cancelled</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="ps_sent_to_ps">%1$s sent to %2$s</string>
    <string name="ps_receive_from_ps">%1$s receive from %2$s</string>
    <string name="accepted_receiving_ps_from_ps">Accepted receiving %1$s from %2$s</string>
    <string name="rejected_receiving_ps">Rejected receiving %s</string>
    <string name="sending_to_ps">Sending to %s</string>
    <string name="receiving_from_ps">Receiving from %s</string>
    <string name="sending_ps_rejected_by_ps">Sending %1$s rejected by %2$s</string>
    <string name="ps_transfer_cancelled_by_ps">%1$s transfer cancelled by %2$s</string>
    <string name="start_chord">Start Chord</string>
    <string name="stop_chord">Stop Chord</string>
    <string name="join_channel">Join Channel</string>
    <string name="leave_channel">Leave Channel</string>
    <string name="public_channel">Public Channel</string>
    <string name="joined_channel">Joined Channel</string>
    <string name="send_data_file">Send data/file</string>
    <string name="wifi">Wi-Fi</string>
    <string name="mobile_ap">Mobile AP</string>
    <string name="wifi_direct">Wi-Fi Direct</string>
    <string name="title">Chord API Demo</string>
    <string name="description">Select network for using Chord</string>
    <string name="no_device_description">No network connection. Connect to networks and try again</string>
    <string name="must_select">Select at least one node</string>
    <string name="input_channel_name">Enter new channel name</string>
    <string name="new_message">New message from %1$s\n: %2$s</string>
    <string name="more">More</string>

    <!--  Notifications -->
    <string name="incoming_message_view_message_text">This is the text of the posted notification.</string>
    <string name="imcoming_message_view_message2_text">Did you notice that the status bar icon disappeared?</string>
    <string name="imcoming_message_ticker_text">New text message:</string>
    <string name="imcoming_message_ticker_text">New text message: <xliff:g id="text">%0$s</xliff:g></string>
    <string name="notification_message">Welcome to Cheese Cake Factory. We will be with you in 5 minutes.</string>
    <string name="check_menu">Whats for food?</string>
    
    
    <!-- Google Plus Sign in Integration -->
    <string name="gplus_signin">Sign In</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="loading_status">Loading…</string>
    <string name="default_status" />
    <string name="greeting_status">Welcome, %s.</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in.</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    
</resources>