<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/label_lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_latlng" />

    <TextView
        android:id="@+id/lat_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_lat_lng"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/label_lat_lng"
        android:textIsSelectable="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lat_lng"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lat_lng"
        android:text="@string/unknown"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/text_connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_connection_status"
        android:text="@string/unknown"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection_state"
        android:layout_alignParentLeft="true"
        android:onClick="getLocation"
        android:text="@string/nearby_get_location" />

    <Button
        android:id="@+id/start_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection_state"
        android:layout_toRightOf="@+id/get_location_button"
        android:onClick="startUpdates"
        android:text="@string/nearby_start_updates" />

    <Button
        android:id="@+id/nearby_stop_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection_state"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="stopUpdates"
        android:text="@string/nearby_stop_updates" />

    <EditText
        android:id="@+id/search_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nearby_stop_updates">
    </EditText>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/search_field"
        android:layout_margin="20dip"
        android:text="@string/search_restaurants" >
    </Button>

    <ListView
        android:id="@+id/restaurants_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_button"
        android:padding="5dip" >
    </ListView>

</RelativeLayout>