<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >	

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#fff"
        android:background="@color/blue_ocean" />    
	
    <TextView
        android:id="@+id/help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/titleTextView"
        android:gravity="center"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#fff"
        android:background="#777"
        android:text="Use NoQ set up to configure the app and get amazing customer experience."/> 
        
    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp">
        <Button
            android:id="@+id/buttonWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:drawableTop="@drawable/cancel"
            android:drawablePadding="2dp"
	        android:focusable="false"
	        android:enabled="false"
            android:text="@string/wifi" />

        <Button
            android:id="@+id/buttonMobileAp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:drawableTop="@drawable/cancel"
            android:drawablePadding="2dp"
	        android:focusable="false"
	        android:enabled="false"
            android:text="@string/mobile_ap" />

        <Button
            android:id="@+id/buttonWifiDirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:drawableTop="@drawable/cancel"
            android:drawablePadding="2dp"
	        android:focusable="false"
	        android:enabled="false"
            android:text="@string/wifi_direct" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom = "20dp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="20sp"
        android:layout_above = "@id/buttonLinearLayout"/>
</RelativeLayout>